--- a/lab-1/index.html
+++ b/lab-1/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-
+<div class="container">
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -25,20 +25,60 @@
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse-container">
             <ul class="nav navbar-nav">
-                <li><a>Home</a></li>
-                <li><a>Products</a></li>
+                <li class="active"><a href="#"> Home</a></li>
+                <li><a href="#">Products</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container">
-    <div class="jumbotron">
-        <h2>Bootstrap Rocks!</h2>
-        <p>Bootstrap is so great</p>
-    </div>
+<div class="jumbotron">
+        <h2>My awesome lab 1</h2>
+        <p>In this lab we will show our skills in basic bootstrap</p>
 </div>
 
 
+<div class="row">
+    <div class="col-xs-12 col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    My Title
+                </div>
+            </div>
+            <div class="panel-body">
+               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolores dolorum et, eum incidunt inventore, ipsa odio quas quod reprehenderit voluptate, voluptates! Asperiores delectus doloribus magni molestiae quasi saepe, tempore.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur dolor dolorum ipsum laboriosam libero nam obcaecati omnis quaerat quidem quis quo repellat sint, veniam? Mollitia necessitatibus odio quia tempore vitae.
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    Heading
+                </div>
+            </div>
+            <div class="panel-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque et iste labore neque praesentium. Aliquam autem dolorem doloremque nam officia pariatur rerum? Consectetur delectus illo magnam modi nobis quia saepe.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A autem consectetur, debitis dicta ea exercitationem expedita laudantium, libero perferendis quisquam saepe suscipit, voluptas! Doloribus id nam nesciunt placeat voluptas. Non!
+            </div>
+        </div>
+    </div>
+    <div class="col-xs-12 col-md-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="panel-title">
+                    Heading
+                </div>
+            </div>
+            <div class="panel-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur maiores maxime modi, nostrum quam quisquam quos recusandae voluptatum. Blanditiis consequatur debitis doloribus explicabo facere laboriosam nemo pariatur provident repellendus ut?
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aliquam aliquid consequatur deleniti distinctio, dolorem doloribus ducimus esse exercitationem facilis impedit, magni maiores quae rem vel, voluptatem? Dolores, illo!
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 </body>
 </html>
