--- a/lab-1/index.html
+++ b/lab-1/index.html
@@ -33,7 +33,7 @@
 </nav>
 
 <div class="jumbotron">
-        <h2>My awesome lab 1</h2>
+        <h1>My awesome lab 1</h1>
         <p>In this lab we will show our skills in basic bootstrap</p>
 </div>
 
@@ -43,7 +43,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="panel-title">
-                    My Title
+                    Heading
                 </div>
             </div>
             <div class="panel-body">
